# raftaar

./: .gitignore  CMakeLists.txt  README.md
flowchart/: flowchart.py  guide.md
guide/: GUIDE.MD  flowchart.py
src/: equation_generation.cpp  equation_generation.hpp  main.cpp  mode_equations.cpp  mode_stats.cpp  mode_timed.cpp  mode_timed.hpp  mode_types.hpp  mode_utils.cpp  mode_utils.hpp  mode_words.cpp  mode_words.hpp  typing_state.cpp  ui_components.cpp  ui_components.hpp
src/core/: typing_state.cpp  typing_state.hpp
src/data/: data_handler.cpp  data_handler.hpp
src/modes/: mode_equations.cpp  mode_equations.hpp  mode_stats.cpp  mode_stats.hpp  mode_timed.cpp  mode_words.cpp
src/ui/: ui_components.cpp  ui_components.hpp
src/utils/: equation_generation.cpp  equation_generation.hpp  mode_utils.cpp  mode_utils.hpp
